[workspace]
members = ["webpki-ccadb", "webpki-root-certs", "webpki-roots"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/rustls/webpki-roots"
repository = "https://github.com/rustls/webpki-roots"

[workspace.dependencies]
hex = "0.4.3"
pki-types = { package = "rustls-pki-types", version = "1.8", default-features = false }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"] }
x509-parser = "0.17.0"
yasna = "0.5.2"
