[package]
name = "webpki-root-certs"
version = "0.26.7"
edition.workspace = true
readme = "README.md"
license = "MPL-2.0"
homepage.workspace = true
repository.workspace = true
description = "Mozilla trusted certificate authorities in self-signed X.509 format for use with crates other than webpki"

# The following notice applies to all the files in this source subtree:
#
#     This Source Code Form is subject to the terms of the Mozilla Public
#     License, v. 2.0. If a copy of the MPL was not distributed with this
#     file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# (If you copy files from here into another program which is not
# licenced MPL-2.0, you should add that notice to each copied file.)

[dependencies]
pki-types = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
percent-encoding = "2.3"
ring = "0.17.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webpki = { workspace = true }
webpki-ccadb = { path = "../webpki-ccadb" }
x509-parser = { workspace = true }
