[package]
name = "webpki-root-certs"
version = "1.0.6"
edition.workspace = true
rust-version = { workspace = true }
readme = "README.md"
license = "CDLA-Permissive-2.0"
homepage.workspace = true
repository.workspace = true
description = "Mozilla trusted certificate authorities in self-signed X.509 format for use with crates other than webpki"

[dependencies]
pki-types = { workspace = true }

[dev-dependencies]
aws-lc-rs = { workspace = true }
hex = { workspace = true }
percent-encoding = { workspace = true }
tokio = { workspace = true }
webpki = { workspace = true }
webpki-ccadb = { path = "../webpki-ccadb" }
x509-parser = { workspace = true }
